--- a/src/main/webapp/templates-hidden/default.html
+++ b/src/main/webapp/templates-hidden/default.html
@@ -77,6 +77,8 @@
         <hr class="space" >
 
 	<span class="lift:Menu.builder"></span>
+          <div class="lift:Msgs?showAll=true"></div>
+
 
         <hr class="space" />
       </div>
