PassThur and IE Comments examples.

--- a/src/main/webapp/passthru.html
+++ b/src/main/webapp/passthru.html
@@ -3,17 +3,14 @@
 <head><meta content="text/html; charset=UTF-8" http-equiv="content-type" /><title>Home</title></head>
 <body class="lift:content_id=main">
 <div id="main" class="lift:surround?with=default;at=content">
-    <h2>Welcome to your project!</h2>
-    <p>
-	<span>
-	  Welcome to your Lift app
-	</span>
+    <h2>Pass Thru Example</h2>
 
-    <div class="lift:IEOnly?cond=lt+IE+9">
-        You're using IE 8 or earlier
+    <p>There's a 50:50 chance of seeing "Try again" or "Congratulations!":</p>
+
+    <div class="lift:PassThruSnippet">
+        Try again - this is the template content.
     </div>
 
-    </p>
 </div>
 </body>
 </html>
