Example of custom resource IDs

--- a/src/main/webapp/templates-hidden/default.html
+++ b/src/main/webapp/templates-hidden/default.html
@@ -6,8 +6,10 @@
     <title class="lift:Menu.title">App: </title>
     <style class="lift:CSS.blueprint"></style>
     <style class="lift:CSS.fancyType"></style>
-    <script id="jquery" src="/classpath/jquery.js" type="text/javascript"></script>
+    <script id="jquery" class="lift:with-resource-id" src="/classpath/jquery.js" type="text/javascript"></script>
     <script id="json" src="/classpath/json.js" type="text/javascript"></script>
+
+
     <script class="lift:Html5Shiv"></script>
     <style type="text/css">
             /* <![CDATA[ */
