--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,15 +4,13 @@
 <body class="lift:content_id=main">
 <div id="main" class="lift:surround?with=default;at=content">
     <h2>Welcome to your project!</h2>
-    <p>
-	<span>
-	  Welcome to your Lift app
-	</span>
 
     <div class="lift:IEOnly?cond=lt+IE+9">
         You're using IE 8 or earlier
     </div>
 
+    <p>
+        To see a 403 error, try to access <a href="secret.html">secret.html</a>
     </p>
 </div>
 </body>
