Added example of links with notices.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,6 +12,15 @@
     <p>
         To see a 403 error, try to access <a href="secret.html">secret.html</a>
     </p>
+
+    <div class="lift:Notices?form=post">
+        <p>
+            To see a status message with a link in it, press the button.
+        </p>
+        <input name="noticeButton" type="button" value="Click me">
+        <div class="lift:Msg?id=checkPrivacyPolicy"></div>
+    </div>
+
 </div>
 </body>
 </html>
