using data-lift= instead of class="lift:

--- a/src/main/webapp/403.html
+++ b/src/main/webapp/403.html
@@ -4,7 +4,7 @@
     <title>403</title>
 </head>
 <body class="lift:content_id=main">
-<div id="main" class="lift:surround?with=error-template;at=content">
+<div id="main" data-lift="surround?with=error-template;at=content">
     <h2>403 - Forbidden</h2>
 
     <h4>This page is shown as a custom response to a 403 status code</h4>
