--- a/src/main/webapp/headmerge.html
+++ b/src/main/webapp/headmerge.html
@@ -4,10 +4,10 @@
   <title>Special</title>
 </head>
 <body class="lift:content_id=main">
-<div id="main" class="lift:surround?with=default;at=content">
+<div id="main" data-lift="surround?with=default;at=content">
     <h2>Head merge example</h2>
 
-    <link class="lift:head" rel="stylesheet" href="red-titles.css" type="text/css" />
+    <link data-lift="head" rel="stylesheet" href="red-titles.css" type="text/css" />
 
     <p>The heading is red because we have merged red-title.css into the head on this page.</p>
 
