--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,10 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head><meta content="text/html; charset=UTF-8" http-equiv="content-type" /><title>Home</title></head>
 <body class="lift:content_id=main">
-<div id="main" class="lift:surround?with=default;at=content">
+<div id="main" data-lift="surround?with=default;at=content">
     <h2>Welcome to your project!</h2>
 
-    <div class="lift:IEOnly?cond=lt+IE+9">
+    <div data-lift="IEOnly?cond=lt+IE+9">
         You're using IE 8 or earlier
     </div>
 
@@ -13,12 +13,12 @@
         To see a 403 error, try to access <a href="secret.html">secret.html</a>
     </p>
 
-    <div class="lift:Notices?form=post">
+    <div data-lift="Notices?form=post">
         <p>
             To see a status message with a link in it, press the button.
         </p>
         <input name="noticeButton" type="button" value="Click me">
-        <div class="lift:Msg?id=checkPrivacyPolicy"></div>
+        <div data-lift="Msg?id=checkPrivacyPolicy"></div>
     </div>
 
 </div>
