--- a/src/main/webapp/passthru.html
+++ b/src/main/webapp/passthru.html
@@ -2,12 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head><meta content="text/html; charset=UTF-8" http-equiv="content-type" /><title>Home</title></head>
 <body class="lift:content_id=main">
-<div id="main" class="lift:surround?with=default;at=content">
+<div id="main" data-lift="surround?with=default;at=content">
     <h2>Pass Thru Example</h2>
 
     <p>There's a 50:50 chance of seeing "Try again" or "Congratulations!":</p>
 
-    <div class="lift:PassThruSnippet">
+    <div data-lift="PassThruSnippet">
         Try again - this is the template content.
     </div>
 
