--- a/src/main/webapp/404.html
+++ b/src/main/webapp/404.html
@@ -4,7 +4,7 @@
     <title>404</title>
 </head>
 <body class="lift:content_id=main">
-<div id="main" class="lift:surround?with=error-template;at=content">
+<div id="main" data-lift="surround?with=error-template;at=content">
     <h2>404 - Page not found</h2>
 
     <h4>Well, this page was found, obviously, but not the one you were looking for.</h4>
