--- a/src/main/webapp/templates-hidden/default.html
+++ b/src/main/webapp/templates-hidden/default.html
@@ -3,14 +3,14 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
     <meta name="description" content="" />
     <meta name="keywords" content="" />
-    <title class="lift:Menu.title">App: </title>
-    <style class="lift:CSS.blueprint"></style>
-    <style class="lift:CSS.fancyType"></style>
-    <script id="jquery" class="lift:with-resource-id" src="/classpath/jquery.js" type="text/javascript"></script>
+    <title data-lift="Menu.title">App: </title>
+    <style data-lift="CSS.blueprint"></style>
+    <style data-lift="CSS.fancyType"></style>
+    <script id="jquery" data-lift="with-resource-id" src="/classpath/jquery.js" type="text/javascript"></script>
     <script id="json" src="/classpath/json.js" type="text/javascript"></script>
 
 
-    <script class="lift:Html5Shiv"></script>
+    <script data-lift="Html5Shiv"></script>
     <style type="text/css">
             /* <![CDATA[ */
         .edit_error_class {
@@ -78,8 +78,8 @@
 
     <div class="column span-6 colborder sidebar">
         <hr class="space" />
-        <span class="lift:Menu.builder"></span>
-        <div class="lift:Msgs?showAll=true"></div>
+        <span data-lift="Menu.builder"></span>
+        <div data-lift="Msgs?showAll=true"></div>
         <hr class="space" />
     </div>
 
