data-lift-content-id instead of class="lift:content+id=main"

--- a/src/main/webapp/403.html
+++ b/src/main/webapp/403.html
@@ -3,7 +3,7 @@
 <head>
     <title>403</title>
 </head>
-<body class="lift:content_id=main">
+<body data-lift-content-id="main">
 <div id="main" data-lift="surround?with=error-template;at=content">
     <h2>403 - Forbidden</h2>
 
