--- a/src/main/webapp/headmerge.html
+++ b/src/main/webapp/headmerge.html
@@ -3,7 +3,7 @@
 <head>
   <title>Special</title>
 </head>
-<body class="lift:content_id=main">
+<body data-lift-content-id="main">
 <div id="main" data-lift="surround?with=default;at=content">
     <h2>Head merge example</h2>
 
