--- a/src/main/webapp/404.html
+++ b/src/main/webapp/404.html
@@ -3,7 +3,7 @@
 <head>
     <title>404</title>
 </head>
-<body class="lift:content_id=main">
+<body data-lift-content-id="main"
 <div id="main" data-lift="surround?with=error-template;at=content">
     <h2>404 - Page not found</h2>
 
