Updated for RC5

--- a/src/main/webapp/headmerge.html
+++ b/src/main/webapp/headmerge.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Special</title>
+  <title>Head Merging</title>
 </head>
 <body data-lift-content-id="main">
 <div id="main" data-lift="surround?with=default;at=content">
-    <h2>Head merge example</h2>
-
-    <link data-lift="head" rel="stylesheet" href="red-titles.css" type="text/css" />
-
-    <p>The heading is red because we have merged red-title.css into the head on this page.</p>
-
+  <h2>Head merge example</h2>
+  <link data-lift="head" rel="stylesheet" href="red-titles.css" type="text/css" />
+  <p>The heading is red because we have merged red-title.css into the head on this page.</p>
 </div>
 </body>
 </html>
