--- a/src/main/webapp/templates-hidden/default.html
+++ b/src/main/webapp/templates-hidden/default.html
@@ -7,6 +7,12 @@
     <style data-lift="CSS.blueprint"></style>
     <style data-lift="CSS.fancyType"></style>
     <script id="jquery" data-lift="with-resource-id" src="/classpath/jquery.js" type="text/javascript"></script>
+
+    <link  data-lift="with-resource-id" rel="stylesheet" type="text/css" href="/cached/css/standard.css" />
+
+    <link  data-lift="with-resource-id" rel="stylesheet" type="text/css" href="/red-titles.css" />
+
+
     <script id="json" src="/classpath/json.js" type="text/javascript"></script>
 
 
